fix alignment of the info box in quick start guide
[fixes#27937141]

--- a/scss/workspaces/_quickstart.scss
+++ b/scss/workspaces/_quickstart.scss
@@ -30,7 +30,7 @@
         margin-bottom: 20px;
         margin-right: 10px;
     }
-    
+
     a.dismiss {
         font-size: 12px;
         font-weight: $semibold;
@@ -40,6 +40,7 @@
     }
 
     .info_box {
+        margin-left: 8px;
         padding: 15px;
         padding-right: 5px;
         margin-bottom: 10px;
@@ -68,14 +69,6 @@
                 font-weight: $semibold;
             }
         }
-    }
-
-    .add_team_members {
-        margin-left: 8px;
-    }
-
-    .edit_workspace_settings {
-        margin-left: 8px;
     }
 
 }
